5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1723_2505.log
== TEST (2019-05-11 16:27:13) 
-- CODE:
from math import*
x = float(input("valor do anguloem radianos: "))
k = int(input("quantidade de repeticoes: "))
s = 0
i=1
while(k!=0):
	S=(x**i)/factorial(i)	
	k = k-1
	i = i + 2
	
print(round(s,10))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = float(input())
ValueError: could not convert string to float: 'pi/2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 16:28:25) 
-- CODE:
from math import*
x = eval(input("valor do anguloem radianos: "))
k = int(input("quantidade de repeticoes: "))
s = 0
i=1
while(k!=0):
	S=(x**i)/factorial(i)	
	k = k-1
	i = i + 2
	
print(round(s,10))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = float(input())
ValueError: could not convert string to float: 'pi/2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 16:34:26) 
-- CODE:
from math import*
x = eval(input("valor do anguloem radianos: "))
k = int(input("quantidade de repeticoes: "))
s = 0
i=1
while(k!=0):
	S=((x**i)/factorial(i))-(x**(i+2))/factorial(i+2)+(x**(i+4)/factorial(i + 4)	
	k = k-1
	i = i + 2
	
print(round(s,10))	
-- ERROR:
File "XXXX", line 8
    k = k-1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 16:35:05) 
-- CODE:
from math import*
x = eval(input("valor do anguloem radianos: "))
k = int(input("quantidade de repeticoes: "))
s = 0
i=1
while(k!=0):
	S=((x**i)/factorial(i))-(x**(i+2))/factorial(i+2)+(x**(i+4)/factorial(i+4)	
	k = k-1
	i = i + 2
	
print(round(s,10))	
-- ERROR:
File "XXXX", line 8
    k = k-1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 16:35:43) 
-- CODE:
from math import*
x = eval(input("valor do anguloem radianos: "))
k = int(input("quantidade de repeticoes: "))
s = 0
i=1
while(k!=0):
	S=
	k = k-1
	i = i + 2
	
print(round(s,10))	
-- ERROR:
File "XXXX", line 7
    S=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 16:35:48) 
-- CODE:
from math import*
x = eval(input("valor do anguloem radianos: "))
k = int(input("quantidade de repeticoes: "))
s = 0
i=1
while(k!=0):
	S=2
	k = k-1
	i = i + 2
	
print(round(s,10))	
-- ERROR:
File "XXXX", line 7
    S=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 16:36:20) 
-- CODE:
from math import*
x = eval(input("valor do anguloem radianos: "))
k = int(input("quantidade de repeticoes: "))
s = 0
i=1
while(k!=0):
	s=2
	k = k-1
	i = i + 2
	
print(round(s,10))	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 16:43:40) 
-- CODE:
from math import*
x = eval(input("valor do anguloem radianos: "))
k = int(input("quantidade de repeticoes: "))
s = 0
i=1
while(k!=0):
	
	s1=x
	k = k-1
	i = i + 2
	s = (x**i)/factorial(i)
	s2 = x-s
print(round(s2,10))	
-- OUTPUT:
1.570792728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 16:50:57) 
-- CODE:
from math import*
x = eval(input("valor do anguloem radianos: "))
k = int(input("quantidade de repeticoes: "))
s = 0
i=1
while(k!=0):
	s = (x**i)/factorial(i)
	i= i+2
	k=k-1
	s= s-s
print(round(s2,10))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(s2,10))	
NameError: name 's2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 16:51:07) 
-- CODE:
from math import*
x = eval(input("valor do anguloem radianos: "))
k = int(input("quantidade de repeticoes: "))
s = 0
i=1
while(k!=0):
	s = (x**i)/factorial(i)
	i= i+2
	k=k-1
	s= s-s
print(round(s,10))	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:02:37) 
-- CODE:
from math import*
x = eval(input("valor do anguloem radianos: "))
k = int(input("quantidade de repeticoes: "))
s = 0
i=0
while(k!=0):
	s = (x**(2i+1)/factorial(2i+1))*(-1**i)
	i= 2i+1
	k=k-1
		
print(round(s,10))	
-- ERROR:
File "XXXX", line 7
    s = (x**(2i+1)/factorial(2i+1))*(-1**i)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:04:43) 
-- CODE:
from math import*
x = eval(input("valor do anguloem radianos: "))
k = int(input("quantidade de repeticoes: "))
s = 0
i=0
while(k!=0):
	s = ((x**(2i+1))/factorial(2i+1))*(-1**i)
	i= 2i+1
	k= k-1
	
print(round(s,10))	
-- ERROR:
File "XXXX", line 7
    s = ((x**(2i+1))/factorial(2i+1))*(-1**i)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:06:51) 
-- CODE:
from math import*
x = eval(input("valor do anguloem radianos: "))
k = int(input("quantidade de repeticoes: "))
s = 0
i=0
while(k!=0):
	s = ((x**(2i+1))/factorial(2i+1))*(-1**i)
	i= i+1
	k= k-1
	
print(round(s,10))	
-- ERROR:
File "XXXX", line 7
    s = ((x**(2i+1))/factorial(2i+1))*(-1**i)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:07:22) 
-- CODE:
from math import*
x = eval(input("valor do anguloem radianos: "))
k = int(input("quantidade de repeticoes: "))
s = 0
i=0
while(k!=0):
	s = ((x**(2i+1))/factorial(2i+1))*(-1**i)
	i= i+1
	k= k-1
	
print(round(s,10))	
-- ERROR:
File "XXXX", line 7
    s = ((x**(2i+1))/factorial(2i+1))*(-1**i)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:07:46) 
-- CODE:
from math import*
x = eval(input("valor do anguloem radianos: "))
k = int(input("quantidade de repeticoes: "))
s = 0
i=0
while(k!=0):
	s = ((x**(2*i+1))/factorial(2*i+1))*(-1**i)
	i= i+1
	k= k-1
	
print(round(s,10))	
-- OUTPUT:
-0.0001604412
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:07:54) 
-- CODE:
from math import*
x = eval(input("valor do angulo em radianos: "))
k = int(input("quantidade de repeticoes: "))
s = 0
i=0
while(k!=0):
	s = ((x**(2*i+1))/factorial(2*i+1))*(-1**i)
	i= i+1
	k= k-1
	
print(round(s,10))	
-- OUTPUT:
-0.0001604412
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:08:51) 
-- CODE:
from math import*
x = eval(input("valor do angulo em radianos: "))
k = int(input("quantidade de repeticoes: "))
s = 0
i=0
while(k!=0):
	s = ((x**(2*i+1))/factorial(2*i+1))*(-1**i)
	i= i+1
	k= k-1
	
print(round(s,10))	
-- OUTPUT:
-0.0001604412
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:09:50) 
-- CODE:
from math import*
x = eval(input("valor do angulo em radianos: "))
k = int(input("quantidade de repeticoes: "))
s = 0
i=0
while(k==0):
	s = ((x**(2*i+1))/factorial(2*i+1))*(-1**i)
	i= i+1
	k= k-1
	
print(round(s,10))	
-- OUTPUT:
-0.0001604412
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:10:23) 
-- CODE:
from math import*
x = eval(input("valor do angulo em radianos: "))
k = int(input("quantidade de repeticoes: "))
s = 0
i=0
while(k>0):
	s = ((x**(2*i+1))/factorial(2*i+1))*(-1**i)
	i= i+1
	k= k-1
	
print(round(s,10))	
-- OUTPUT:
-0.0001604412
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:11:52) 
-- CODE:
from math import*
x = eval(input("valor do angulo em radianos: "))
k = int(input("quantidade de repeticoes: "))
s = 0
i=0
while(k>0):
	s = s+ ((x**(2*i+1))/factorial(2*i+1))*(-1**i)
	i= i+1
	k= k-1
	
print(round(s,10))	
-- OUTPUT:
-2.3012952459
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:13:24) 
-- CODE:
from math import*
x = eval(input("valor do angulo em radianos: "))
k = int(input("quantidade de repeticoes: "))
s = 0
i=0
while(k>0):
	s = ((x**(2*i+1))/factorial(2*i+1))*(-1**i)
	i= i+1
	k= k-1
	s=s+s
print(round(s,10))	
-- OUTPUT:
-0.0003208824
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:21:13) 
-- CODE:
from math import*
x = eval(input("valor do angulo em radianos: "))
k = int(input("quantidade de repeticoes: "))
s = 0
i=0
while(k>0):
	s = s + ((x**(2*i+1))/factorial(2*i+1))*(-1**i)
	i= i+1
	k= k-1
	
print(round(s,10))	
-- OUTPUT:
-2.3012952459
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:22:55) 
-- CODE:
from math import*
x = eval(input("valor do angulo em radianos: "))
k = int(input("quantidade de repeticoes: "))
s = 0
i=0
while(k!=0):
	s = s + ((x**(2*i+1))/factorial(2*i+1))*(-1**i)
	i= i+1
	k= k-1
	
print(round(s,10))	
-- OUTPUT:
-2.3012952459
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:27:28) 
-- CODE:
from math import*
x = eval(input("valor do angulo em radianos: "))
k = int(input("quantidade de repeticoes: "))
s = 0
i=0
while(k>i):
	s = s + ((x**(2*i+1))/factorial(2*i+1))*(-1**i)
	i= i+1
	
	
print(round(s,10))	
-- OUTPUT:
-2.3012952459
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:31:11) 
-- CODE:
from math import*
x = eval(input("valor do angulo em radianos: "))
k = int(input("quantidade de repeticoes: "))
s = 0
i=0
while(k>i):
	s = s + ((x**(2*i+1))/factorial(2*i+1))*((-1)**i)
	i= i+1
	
	
print(round(s,10))	
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 17:31:17) 
-- CODE:
from math import*
x = eval(input("valor do angulo em radianos: "))
k = int(input("quantidade de repeticoes: "))
s = 0
i=0
while(k>i):
	s = s + ((x**(2*i+1))/factorial(2*i+1))*((-1)**i)
	i= i+1
	
	
print(round(s,10))	
-- EXECUTION TIME:
0.123306
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
